// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-recurrence-rule-periods Renders \`pbehavior-recurrence-rule-periods\` with entities 1`] = `
<div>
  <div
    class="layout justify-space-between align-center"
  >
    <div
      class="layout justify-center"
    >
      <span
        class="text-h6"
      >
        Periods
      </span>
    </div>
    <c-action-btn-stub
      icon="event_note"
      tooltip="Calendar with periods"
    />
  </div>
  <div
    class="layout mt-2"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active theme--light"
              style="left: 0px; position: absolute;"
            >
              Range
            </label>
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                This week
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
              value="thisWeek"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <div
      class="v-data-iterator data-iterator"
    >
      <div
        class="flex"
      >
        <transition-stub
          name="fade-transition"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            class="v-progress-linear progress ma-0 v-progress-linear--visible theme--light"
            role="progressbar"
            style="height: 3px; display: none;"
          >
            <div
              class="v-progress-linear__background primary"
              style="opacity: 0.3; left: 0%; width: 100%;"
            />
            <div
              class="v-progress-linear__buffer"
            />
            <transition-stub
              name="fade-transition"
            >
              <div
                class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
              >
                <div
                  class="v-progress-linear__indeterminate long primary"
                />
                <div
                  class="v-progress-linear__indeterminate short primary"
                />
              </div>
            </transition-stub>
          </div>
        </transition-stub>
      </div>
      <div
        class="flex"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__title"
          >
            04/03/2021 13:43:08 — 04/03/2021 13:59:48
          </div>
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__title"
          >
            04/03/2021 13:43:09 — 04/03/2021 13:59:49
          </div>
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__title"
          >
            04/03/2021 13:43:10 — 04/03/2021 13:59:50
          </div>
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__title"
          >
            04/03/2021 13:43:11 — 04/03/2021 13:59:51
          </div>
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__title"
          >
            04/03/2021 13:43:12 — 04/03/2021 13:59:52
          </div>
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__title"
          >
            04/03/2021 13:43:13 — 04/03/2021 13:59:53
          </div>
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__title"
          >
            04/03/2021 13:43:14 — 04/03/2021 13:59:54
          </div>
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__title"
          >
            04/03/2021 13:43:15 — 04/03/2021 13:59:55
          </div>
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__title"
          >
            04/03/2021 13:43:16 — 04/03/2021 13:59:56
          </div>
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__title"
          >
            04/03/2021 13:43:17 — 04/03/2021 13:59:57
          </div>
        </div>
      </div>
      <div
        class="v-data-footer"
      >
        <div
          class="v-data-footer__select"
        >
          Items per page:
          <div
            class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
          >
            <div
              class="v-input__control"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="v-input__slot"
                role="button"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      10
                    </div>
                    <input
                      aria-label="Items per page:"
                      aria-readonly="false"
                      autocomplete="off"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                  <input
                    type="hidden"
                    value="10"
                  />
                </div>
                <div
                  class="v-menu"
                >
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-data-footer__pagination"
        >
          1-10 of 11
        </div>
        <div
          class="v-data-footer__icons-before"
        >
          <button
            aria-label="Previous page"
            class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            disabled="disabled"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                chevron_left
              </i>
            </span>
          </button>
        </div>
        <div
          class="v-data-footer__icons-after"
        >
          <button
            aria-label="Next page"
            class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                chevron_right
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pbehavior-recurrence-rule-periods Renders \`pbehavior-recurrence-rule-periods\` without entities 1`] = `
<div>
  <div
    class="layout justify-space-between align-center"
  >
    <div
      class="layout justify-center"
    >
      <span
        class="text-h6"
      >
        Periods
      </span>
    </div>
    <c-action-btn-stub
      icon="event_note"
      tooltip="Calendar with periods"
    />
  </div>
  <div
    class="layout mt-2"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active theme--light"
              style="left: 0px; position: absolute;"
            >
              Range
            </label>
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                This week
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
              value="thisWeek"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <div
      class="v-data-iterator data-iterator"
    >
      <div
        class="flex"
      >
        <transition-stub
          name="fade-transition"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            class="v-progress-linear progress ma-0 v-progress-linear--visible theme--light"
            role="progressbar"
            style="height: 3px; display: none;"
          >
            <div
              class="v-progress-linear__background primary"
              style="opacity: 0.3; left: 0%; width: 100%;"
            />
            <div
              class="v-progress-linear__buffer"
            />
            <transition-stub
              name="fade-transition"
            >
              <div
                class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
              >
                <div
                  class="v-progress-linear__indeterminate long primary"
                />
                <div
                  class="v-progress-linear__indeterminate short primary"
                />
              </div>
            </transition-stub>
          </div>
        </transition-stub>
      </div>
      <div>
        <div
          class="flex"
        >
          <div
            class="v-card v-sheet theme--light"
          >
            <div
              class="v-card__title"
            >
              No data
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-data-footer"
      >
        <div
          class="v-data-footer__select"
        >
          Items per page:
          <div
            class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
          >
            <div
              class="v-input__control"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="v-input__slot"
                role="button"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      10
                    </div>
                    <input
                      aria-label="Items per page:"
                      aria-readonly="false"
                      autocomplete="off"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                  <input
                    type="hidden"
                    value="10"
                  />
                </div>
                <div
                  class="v-menu"
                >
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-data-footer__pagination"
        >
          –
        </div>
        <div
          class="v-data-footer__icons-before"
        >
          <button
            aria-label="Previous page"
            class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            disabled="disabled"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                chevron_left
              </i>
            </span>
          </button>
        </div>
        <div
          class="v-data-footer__icons-after"
        >
          <button
            aria-label="Next page"
            class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            disabled="disabled"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                chevron_right
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
